2010-01-13  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Tor Arne Vestbø.

        [Qt] REGRESSION(53187) Touchevent related tests fail

        https://bugs.webkit.org/show_bug.cgi?id=33602

        Pass the ENABLE_TOUCH_EVENTS to the IDL generators.

        * WebCore.pri:

2010-01-13  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        WebInspector: Timeline panel scrolling speed can be increased.
        https://bugs.webkit.org/show_bug.cgi?id=33579

        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel):
        (WebInspector.TimelinePanel.prototype._scheduleRefresh):
        (WebInspector.TimelinePanel.prototype._refresh):
        (WebInspector.TimelinePanel.prototype._refreshRecords):

2010-01-13  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Split the build process in two different .pro files.
        This allows qmake to be run once all source files are available.

        * DerivedSources.pro: Added.
        * WebCore.pri: Added. Contains common logic between source generation and compilation.
        * WebCore.pro: Moved source generation to DerivedSources.pro.

2010-01-13  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Scrolling editor to the 20Kth line is not smooth.

        https://bugs.webkit.org/show_bug.cgi?id=33587

        * inspector/front-end/TextEditor.js:
        (WebInspector.TextEditor):
        (WebInspector.TextEditor.prototype._textChanged):
        (WebInspector.TextEditor.prototype._highlightChanged):
        (WebInspector.TextEditor.prototype._paintLinesContinuation):
        * inspector/front-end/TextEditorHighlighter.js:
        (WebInspector.TextEditorHighlighter):
        (WebInspector.TextEditorHighlighter.prototype.highlight):
        (WebInspector.TextEditorHighlighter.prototype._highlightInChunks):